[project]
name = "nh-model-server"
version = "0.1.0"
description = "Model Server for NH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "c-two>=0.1.20",
    "fastapi>=0.115.13",
    "numpy>=2.3.1",
    "pyswmm>=2.0.1",
    "pyyaml>=6.0.2",
    "taichi>=1.7.3",
]

[tool.uv.sources]
c-two = { git = "https://github.com/world-in-progress/c-two.git", branch = "main" }
